2002-12-08  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-gswrapper.in: If there is no /dev/fd/3, don't use
	  /dev/fd/3 for standard output. Use the good old "| cat >&3".

2002-12-04  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-filters 2.9.0. 
	  Tag name: "foomatic-filters-2_9_0".
	
2002-12-01  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-gswrapper.in: If there is no /dev/fd/0, don't use
	  /dev/fd/* for standard input, standard output, and standard
	  error. Support of block reading from standard input ("-_"
	  instead of "-" on GhostScript command line), use block
	  reading preferrably.

	* foomatic-rip.in: Made sure that an absolute path for the PPD
	  file is inserted in the PDQ driver description file, suppress
	  log output on standard error whenn generating a PDQ driver
	  description file.

2002-11-29  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-filters 2.9.0pre1. 
	  Tag name: "foomatic-filters-2_9_0pre1".
	
2002-11-28  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Fixed comment text.

	* filter.conf: Updated comment text.

	* USAGE: Fixed typo.
	
2002-11-27  Till Kamppeter <till.kamppeter@gmx.net>

	* Makefile.in, configure.in, makeMan.in: Updated Makefile
	  infrastructure to let the package correctly build the man page
	  and link foomatic-rip into the filter directories of CUPS and
	  PPR.

	* foomatic-rip.in: Allow more than one occurence of the same spot
	  ("%A", "%B", ...) in the RIP command line prototype, so that one
	  option setting can act on several points of the command line
	  (was an old TODO point of Grant).
	
	* foomatic-rip.1.in: Continued working on the man page for
	  foomatic-rip.

	* foomatic-gswrapper.in: Fall back to "| cat >&3" and "-" instead
	  of "/dev/fd/3" and "/dev/fd/0", if the file descriptor directory
	  /dev/fd does not exist.

	* README, USAGE, TODO: Updated the package documentation.
	